@@ -5,10 +5,12 @@ import jakarta.servlet.http.HttpServlet;
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
 import nextstep.mvc.controller.asis.ControllerHandlerAdapter;
 import nextstep.mvc.controller.tobe.HandlerExecutionAdapter;
+import nextstep.mvc.controller.tobe.ParameterResolverExecutor;
 import nextstep.mvc.view.ModelAndView;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -19,7 +21,16 @@ public class DispatcherServlet extends HttpServlet {
     private static final Logger log = LoggerFactory.getLogger(DispatcherServlet.class);
 
     private final List<HandlerMapping> handlerMappings;
-    private final List<HandlerAdapter> handlerAdapters = List.of(new ControllerHandlerAdapter(), new HandlerExecutionAdapter());
+    private final List<HandlerAdapter> handlerAdapters;
+
+    {
+        ParameterResolverExecutor defaultParameterResolverExecutor = new ParameterResolverExecutor(
+            Collections.emptyList());
+        this.handlerAdapters = List.of(
+            new ControllerHandlerAdapter(),
+            new HandlerExecutionAdapter(defaultParameterResolverExecutor)
+        );
+    }
 
     public DispatcherServlet() {
         this.handlerMappings = new ArrayList<>();
